# botpy

./: pyproject.toml
botpy/: api.py  connection.py  manage.py  message.py
botpy/types/: message.py
